--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nrwl/web": "14.1.7",
     "@nrwl/workspace": "14.1.7",
     "@storybook/addon-essentials": "~6.4.12",
+    "@storybook/addons": "^6.5.8",
     "@storybook/builder-webpack5": "~6.4.12",
     "@storybook/core-server": "~6.4.12",
     "@storybook/manager-webpack5": "~6.4.12",
@@ -43,6 +44,8 @@
     "@types/react-dom": "18.0.3",
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
+    "@xstate/inspect": "^0.6.5",
+    "@xstate/react": "^3.0.0",
     "babel-jest": "27.5.1",
     "babel-loader": "8.1.0",
     "cypress": "^9.1.0",
@@ -57,6 +60,7 @@
     "nx": "14.1.7",
     "prettier": "^2.5.1",
     "react-test-renderer": "18.1.0",
+    "storybook-xstate-addon": "^2.2.2",
     "ts-jest": "27.1.4",
     "ts-node": "9.1.1",
     "typescript": "~4.6.2",
