--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+
 env:
   NX_CLOUD_DISTRIBUTED_EXECUTION: false
   CACHED_DEPENDENCY_PATHS: ${{ github.workspace }}/node_modules
